--- a/openstack_controller/templates/child_objects/baremetal.yaml
+++ b/openstack_controller/templates/child_objects/baremetal.yaml
@@ -1,6 +1,10 @@
+{%- from 'macros/connections.j2' import to_child_object %}
 ironic:
   Deployment:
     ironic-api:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - ironic_retrieve_swift_config
@@ -12,6 +16,9 @@ ironic:
         component: api
   Job:
     ironic-bootstrap:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields:
       - network.proxy.*
       - bootstrap.*
@@ -49,6 +56,9 @@ ironic:
         application: ironic
         component: db-sync
     ironic-ks-endpoints:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - ks_endpoints
@@ -57,6 +67,9 @@ ironic:
         application: ironic
         component: ks-endpoints
     ironic-ks-service:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - ks_service
@@ -65,6 +78,9 @@ ironic:
         application: ironic
         component: ks-service
     ironic-ks-user:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields:
       - endpoints.*
       images:
@@ -74,6 +90,9 @@ ironic:
         application: ironic
         component: ks-user
     ironic-manage-networks:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - ironic_manage_networks
@@ -82,6 +101,9 @@ ironic:
         application: ironic
         component: manage-networks
     ironic-update-nodes-metadata:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields:
       - conf.nodes.*
       images:
@@ -92,6 +114,9 @@ ironic:
         component: update-nodes-metadata
   StatefulSet:
     ironic-conductor:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - ironic_pxe_init
