--- a/openstack_controller/templates/child_objects/cloudprober.yaml
+++ b/openstack_controller/templates/child_objects/cloudprober.yaml
@@ -1,6 +1,10 @@
+{%- from 'macros/connections.j2' import to_child_object %}
 cloudprober:
   Deployment:
     openstack-cloudprober:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - cloudprober_openstack_discovery
