--- a/openstack_controller/templates/child_objects/identity.yaml
+++ b/openstack_controller/templates/child_objects/identity.yaml
@@ -1,3 +1,4 @@
+{%- from 'macros/connections.j2' import to_child_object %}
 keystone:
   CronJob:
     keystone-credential-rotate:
@@ -25,7 +26,14 @@ keystone:
       pod_labels:
         application: keystone
         component: api
+      ports:
+      - name: ks-pub
+        port: 5000
+        protocol: TCP
     keystone-client:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - keystone_client
