--- a/openstack_controller/templates/child_objects/image.yaml
+++ b/openstack_controller/templates/child_objects/image.yaml
@@ -1,3 +1,4 @@
+{%- from 'macros/connections.j2' import to_child_object %}
 glance:
   CronJob:
     glance-db-purge:
@@ -10,6 +11,9 @@ glance:
         component: db-purge
   Deployment:
     glance-api:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - glance_api
@@ -18,6 +22,9 @@ glance:
         application: glance
         component: api
     glance-registry:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - glance_registry
@@ -27,6 +34,9 @@ glance:
         component: registry
   Job:
     glance-barbican-cert-init:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - glance_barbican_cert_init
@@ -35,6 +45,9 @@ glance:
         application: glance
         component: barbican-cert-init
     glance-bootstrap:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields:
       - network.proxy.*
       - bootstrap.*
@@ -45,6 +58,9 @@ glance:
         application: glance
         component: bootstrap
     glance-clean:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - glance_storage_init
@@ -104,15 +120,10 @@ glance:
       pod_labels:
         application: glance
         component: db-sync
-    glance-image-repo-sync:
-      hash_fields: []
-      images:
-      - image_repo_sync
-      manifest: job_image_repo_sync
-      pod_labels:
-        application: glance
-        component: image-repo-sync
     glance-ks-endpoints:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - ks_endpoints
@@ -121,6 +132,9 @@ glance:
         application: glance
         component: ks-endpoints
     glance-ks-service:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - ks_service
@@ -129,6 +143,9 @@ glance:
         application: glance
         component: ks-service
     glance-ks-user:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields:
       - endpoints.*
       images:
@@ -146,6 +163,9 @@ glance:
         application: glance
         component: metadefs_load
     glance-storage-init:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - glance_api
