--- a/openstack_controller/templates/child_objects/object-storage.yaml
+++ b/openstack_controller/templates/child_objects/object-storage.yaml
@@ -1,6 +1,10 @@
+{%- from 'macros/connections.j2' import to_child_object %}
 ceph-rgw:
   Job:
     ceph-ks-endpoints:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields:
       - endpoints.*
       images:
@@ -10,6 +14,9 @@ ceph-rgw:
         application: ceph
         component: ks-endpoints
     ceph-ks-service:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - ks_service
@@ -18,8 +25,14 @@ ceph-rgw:
         application: ceph
         component: ks-service
     ceph-rgw-ks-user:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields:
       - endpoints.*
       images:
       - ks_user
       manifest: job_ks_user
+      pod_labels:
+        application: ceph
+        component: ks-user
