--- a/openstack_controller/templates/child_objects/placement.yaml
+++ b/openstack_controller/templates/child_objects/placement.yaml
@@ -1,6 +1,10 @@
+{%- from 'macros/connections.j2' import to_child_object %}
 placement:
   Deployment:
     placement-api:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - placement
@@ -27,14 +31,6 @@ placement:
       pod_labels:
         application: placement
         component: db-init
-    placement-db-migrate:
-      hash_fields: []
-      images:
-      - placement
-      manifest: job_db_migrate
-      pod_labels:
-        application: placement
-        component: db_migrate
 {%- if spec["openstack_version"] in ['stein'] %}
     placement-db-nova-migrate-placement:
       hash_fields: []
@@ -54,15 +50,10 @@ placement:
       pod_labels:
         application: placement
         component: db-sync
-    placement-image-repo-sync:
-      hash_fields: []
-      images:
-      - image_repo_sync
-      manifest: job_image_repo_sync
-      pod_labels:
-        application: placement
-        component: image-repo-sync
     placement-ks-endpoints:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - ks_endpoints
@@ -71,6 +62,9 @@ placement:
         application: placement
         component: ks-endpoints
     placement-ks-service:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - ks_service
@@ -79,6 +73,9 @@ placement:
         application: placement
         component: ks-service
     placement-ks-user:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields:
       - endpoints.*
       images:
